fixed overflow hidden on index.html

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ a:visited{
 .projectimage{
     display: inline-block;
     width: 100%;
+    overflow: hidden;
 }
 .project > span >img{
     width: 100%;
@@ -156,6 +157,7 @@ a:visited{
 
 .prozac{
     grid-column: 1/3;
+    overflow: hidden;
 }
 
 @media (min-width:700px){
